Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/errors/TestFatalityOfParseErrors.out
Round 1:
	input files: {TestFatalityOfParseErrors}
	annotations: []
	last round: false
Round 2:
	input files: {}
	annotations: []
	last round: true
SyntaxError.java:1:20: compiler.err.premature.eof
1 error
